k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: govolutto-api
  labels:
    maintainer: maslick
    project: govolutto
    app: govolutto-api
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    maintainer: maslick
    project: govolutto
    app: govolutto-api
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: govolutto-api
spec:
  replicas: 1
  template:
    metadata:
      name: govolutto-api
      labels:
        maintainer: maslick
        project: govolutto
        app: govolutto-api
    spec:
      containers:
        - image: maslick/govolutto
          imagePullPolicy: Always
          name: govolutto-api
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
