k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-govolutto
  labels:
    maintainer: maslick
    project: govolutto
    app: govolutto-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: govolutto.134-209-238-173.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: govolutto-api
              servicePort: 80
